force-app/main/default/objects/Volunteer_Availability__c/Volunteer_Availability__c.object-meta.xml
<CustomObject>
    <description>Captures site volunteers time available for tax counseling sessions</description>
    <label>Volunteer Availability</label>
    <nameField>
        <displayFormat>AV{00000000}</displayFormat>
        <label>Volunteer Availability ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteers Availability</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>