force-app/main/default/objects/Volunteer_Availability__c/fields/Assigned_Role__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Role__c</fullName>
    <description>This is the role assignment of the volunteer. This will be assigned by the coordinator when they designate a volunteer to work a shift.</description>
    <label>Assigned Role</label>
    <type>TextArea</type>
</CustomField>