force-app/main/default/objects/Volunteer_Availability__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Required when their is a reoccurring availability</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>