force-app/main/default/objects/Volunteer_Availability__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <inlineHelpText>Availability end time</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>