force-app/main/default/objects/Volunteer_Availability__c/fields/Is_Reoccuring__c.field-meta.xml
<CustomField>
    <fullName>Is_Reoccuring__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Reoccuring</label>
    <type>Checkbox</type>
</CustomField>