force-app/main/default/objects/Volunteer_Availability__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <inlineHelpText>Work location</inlineHelpText>
    <label>Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>