force-app/main/default/objects/Volunteer_Availability__c/fields/Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Postal_Code__c</fullName>
    <description>Mailing Postal Code of The Volunteer associated with this availability block</description>
    <formula>Program_Volunteer__r.Volunteer__r.Mailing_Address_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Postal Code</label>
    <type>Text</type>
</CustomField>