force-app/main/default/objects/Volunteer_Availability__c/fields/Parent_Availability__c.field-meta.xml
<CustomField>
    <fullName>Parent_Availability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Availability</label>
    <referenceTo>Volunteer_Availability__c</referenceTo>
    <relationshipLabel>Volunteers Availability</relationshipLabel>
    <relationshipName>Volunteers_Availability</relationshipName>
    <type>Lookup</type>
</CustomField>