force-app/main/default/objects/Volunteer_Availability__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <description>Populated via workflow to allow sharing for Tax-aide staff</description>
    <label>Program Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>