force-app/main/default/objects/Volunteer_Availability__c/fields/Program_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Program_Volunteer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program Volunteer</label>
    <referenceTo>Program_Volunteer__c</referenceTo>
    <relationshipLabel>Volunteer Availabilities</relationshipLabel>
    <relationshipName>Volunteer_Availabilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>