force-app/main/default/objects/Volunteer_Availability__c/fields/Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Name__c</fullName>
    <inlineHelpText>Local Coordinator&#39;s name at the time of assignment to shift.</inlineHelpText>
    <label>Supervisor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>