force-app/main/default/objects/Volunteer_Availability__c/fields/Supervisor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Phone__c</fullName>
    <label>Supervisor Phone</label>
    <type>Phone</type>
</CustomField>