force-app/main/default/objects/Volunteer_Availability__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <formula>Program_Volunteer__r.Volunteer__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer</label>
    <type>Text</type>
</CustomField>