force-app/main/default/objects/Volunteer_Availability__c/fields/Volunteer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Phone__c</fullName>
    <description>This field is used as a merge field in an email template</description>
    <label>Volunteer Phone</label>
    <type>Phone</type>
</CustomField>