force-app/main/default/objects/Volunteer_Availability__c/fields/Volunteers_Email__c.field-meta.xml
<CustomField>
    <fullName>Volunteers_Email__c</fullName>
    <label>Volunteers Email</label>
    <type>Email</type>
</CustomField>