force-app/main/default/objects/Volunteer_Availability__c/validationRules/Date_field_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_field_validation</fullName>
    <active>false</active>
    <description>Start time and End time date field must equal Date field.</description>
    <errorConditionFormula>OR(
Date__c &lt;&gt; DATEVALUE(Start_Time__c),
(Date__c  &lt;&gt; DATEVALUE(End_Time__c))
)</errorConditionFormula>
    <errorMessage>Start time and End time date field must equal Date field.</errorMessage>
</ValidationRule>