force-app/main/default/objects/Volunteer_Availability__c/validationRules/End_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Required</fullName>
    <active>true</active>
    <description>If repeating availability is true, then end date is required</description>
    <errorConditionFormula>And (
Is_Reoccuring__c =true,
 ISBLANK(End_Date__c) 
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date is required when availability is reoccurring.</errorMessage>
</ValidationRule>